--- a/epic.crm.frontend/angular.json
+++ b/epic.crm.frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "epic.crm.frontend": {
+    "epic-crm-frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/epic.crm.frontend",
+            "outputPath": "dist/epic-crm-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -30,10 +30,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -66,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "epic.crm.frontend:build:production"
+              "browserTarget": "epic-crm-frontend:build:production"
             },
             "development": {
-              "browserTarget": "epic.crm.frontend:build:development"
+              "browserTarget": "epic-crm-frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "epic.crm.frontend:build"
+            "browserTarget": "epic-crm-frontend:build"
           }
         },
         "test": {
