--- a/epic.crm.backend/Epic.CRM.WebApi/appsettings.json
+++ b/epic.crm.backend/Epic.CRM.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EpicCrmConnection": "Data Source=hudextest.sbp.intra\\sql2019,52866;initial catalog=EPIC_CRM;User ID=sa;Password=Password1234;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
