User refaktor :) : angol objektumok

--- a/epic.crm.backend/Epic.CRM.DataDomain/Epic.CRM.DataDomain.csproj
+++ b/epic.crm.backend/Epic.CRM.DataDomain/Epic.CRM.DataDomain.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\Epic.CRM.Common\Epic.CRM.Common.csproj" />
   </ItemGroup>
 
 </Project>
