--- a/epic.crm.backend/Epic.CRM.BusinessLogic/Epic.CRM.BusinessLogic.csproj
+++ b/epic.crm.backend/Epic.CRM.BusinessLogic/Epic.CRM.BusinessLogic.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Epic.CRM.Common\Epic.CRM.Common.csproj" />
     <ProjectReference Include="..\Epic.CRM.DataDomain\Epic.CRM.DataDomain.csproj" />
   </ItemGroup>
