--- a/epic.crm.frontend/src/assets/config.json
+++ b/epic.crm.frontend/src/assets/config.json
@@ -1,6 +1,6 @@
 {
   "epicCRM": {
-    "appName": "",
-    "apiBaseUrl": ""
+    "appName": "EPIC CRM",
+    "apiBaseUrl": "https://localhost:7190/"
   }
 }
