--- a/epic.crm.backend/Epic.CRM.WebApi/appsettings.json
+++ b/epic.crm.backend/Epic.CRM.WebApi/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AngularHost": "http://localhost:4200"
 }
