--- a/epic.crm.frontend/angular.json
+++ b/epic.crm.frontend/angular.json
@@ -30,10 +30,10 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/scss/bootstrap.scss",
+			  "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
+			  "node_modules/bootstrap/scss/bootstrap.scss",
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
